@@ -1,1 +1,0 @@
-button,input{outline:0;border:none}.article ul li:before,.icon{font-family:Icon}a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,hr,html,i,iframe,img,ins,kbd,label,legend,li,main,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{border:0;padding:0;margin:0}.drawer .toc li a,.stretch .title{text-overflow:ellipsis;white-space:nowrap}.article p>code,.drawer .toc li a,.repo li,.stretch .title{white-space:nowrap}html{box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;font-size:62.5%;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;text-size-adjust:none;height:100%}*,:after,:before{box-sizing:inherit;-moz-box-sizing:inherit;-webkit-box-sizing:inherit}ul{list-style:none}table{border-collapse:collapse;border-spacing:0}td{text-align:left;font-weight:400;vertical-align:middle}button{padding:0;background:0 0;font-size:inherit}input{-webkit-appearance:none;-moz-appearance:none;-ms-appearance:none;-o-appearance:none;appearance:none}a{text-decoration:none;color:inherit;-webkit-transition:color .25s;transition:color .25s}a,button,input,label{-webkit-tap-highlight-color:rgba(255,255,255,0);-webkit-tap-highlight-color:transparent}h1,h2,h3,h4,h5,h6{font-weight:inherit}.icon,body,input{font-weight:400;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}code{color:#e84e40}pre{background:rgba(0,0,0,.05)}pre,pre code{color:rgba(0,0,0,.87)}.c,.c1,.cm,.o{color:rgba(0,0,0,.54)}.k,.kn{color:#A71D5D}.kd,.kt,.n.f{color:#0086B3}.s{color:#183691}.bp,.mi{color:#9575CD}@font-face{font-family:Icon;src:url(http://squidfunk.github.io/mkdocs-material//assets/fonts/icon.eot?52m981);src:url(http://squidfunk.github.io/mkdocs-material//assets/fonts/icon.eot?#iefix52m981) format("embedded-opentype"),url(http://squidfunk.github.io/mkdocs-material//assets/fonts/icon.woff?52m981) format("woff"),url(http://squidfunk.github.io/mkdocs-material//assets/fonts/icon.ttf?52m981) format("truetype"),url(http://squidfunk.github.io/mkdocs-material//assets/fonts/icon.svg?52m981#icon) format("svg");font-weight:400;font-style:normal}.icon{speak:none;font-style:normal;font-variant:normal;text-transform:none;line-height:1}.icon-search:before{content:"\e600"}.icon-back:before{content:"\e601"}.icon-link:before{content:"\e602"}.icon-close:before{content:"\e603"}.icon-menu:before{content:"\e604"}.icon-forward:before{content:"\e605"}.icon-twitter:before{content:"\e606"}.icon-github:before{content:"\e607"}.icon-download:before{content:"\e608"}.icon-star:before{content:"\e609"}.article:after,.backdrop-paper:after,.repo a .count:before{content:" "}.overlay{-webkit-transition:opacity .25s,width 0s .25s,height 0s .25s;transition:opacity .25s,width 0s .25s,height 0s .25s}#toggle-drawer:checked~.overlay,.toggle-drawer .overlay{-webkit-transition:opacity .25s,width 0s,height 0s;transition:opacity .25s,width 0s,height 0s}.js .header{-webkit-transition:background .6s,color .6s;transition:background .6s,color .6s}.js .header:before{-webkit-transition:background .6s;transition:background .6s}.button .icon{-webkit-transition:background .25s;transition:background .25s}body{color:rgba(0,0,0,.87);position:relative;min-height:100%}.backdrop,.scrollable{position:absolute;left:0;bottom:0;right:0}@supports (-webkit-appearance:none){body{background:#e84e40}}.backdrop,.backdrop-paper:after,.ios body{background:#fff}hr{border-top:1px solid rgba(0,0,0,.12);display:block;height:1px}.backdrop-paper,.locked,.scrollable .wrapper{height:100%}.toggle-button{cursor:pointer;color:inherit}.overlay{background:rgba(0,0,0,.54);opacity:0}#toggle-drawer:checked~.overlay,.toggle-drawer .overlay{opacity:1}.header{box-shadow:0 1.5px 3px rgba(0,0,0,.24),0 3px 8px rgba(0,0,0,.05);background:#e84e40;color:#fff}.ios.standalone .header:before{background:rgba(0,0,0,.12)}.bar .path{color:rgba(255,255,255,.7)}.button .icon:active{background:rgba(255,255,255,.12)}.locked{overflow:hidden}.scrollable{top:0;overflow:auto;-webkit-overflow-scrolling:touch}.ios .scrollable .wrapper{margin-bottom:2px}.toggle{display:none}.toggle-button{display:block}.backdrop{top:0;z-index:-1}.header,.overlay{position:fixed;top:0}.backdrop-paper{max-width:1200px;margin-left:auto;margin-right:auto}.backdrop-paper:after{display:block;height:100%;margin-left:262px}.overlay{width:0;height:0;z-index:4}.header{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;left:0;z-index:3;height:56px;padding:4px;overflow:hidden}.ios.standalone .header{position:absolute}.bar{display:table;max-width:1184px;margin-left:auto;margin-right:auto}.bar a{display:block}.no-js .bar .button-search{display:none}.bar .path .icon:before{vertical-align:-1.5px}.button{display:table-cell;vertical-align:top;width:1%}.button button{margin:0;padding:0}.button button:active:before{position:relative;top:0;left:0}.button .icon{border-radius:100%;display:inline-block;font-size:24px;padding:8px;margin:4px}.stretch{display:table;table-layout:fixed;width:100%}.header .stretch{padding:0 20px}.stretch .title{display:table-cell;overflow:hidden}.drawer .section,.no-csstransforms3d #toggle-drawer:checked~.main .drawer,.no-csstransforms3d .toggle-drawer .drawer,.project{display:block}.header .stretch .title{font-size:18px;padding:13px 0}.main{max-width:1200px;margin-left:auto;margin-right:auto}body,input{font-family:Ubuntu,'Helvetica Neue',Helvetica,Arial,sans-serif}.no-fontface body,.no-fontface input{font-family:'Helvetica Neue',Helvetica,Arial,sans-serif}code,pre{font-family:'Ubuntu Mono','Courier New',Courier,monospace}.no-fontface code,.no-fontface pre{font-family:'Courier New',Courier,monospace}#toggle-drawer:checked~.main .drawer,.toggle-drawer .drawer{-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}.project{-webkit-transition:none;transition:none}.project .logo img{-webkit-transition:box-shadow .4s;transition:box-shadow .4s}.drawer .toc a.current{color:#e84e40}.drawer .toc a:focus,.drawer .toc a:hover{color:#00bfa5}.drawer .section{color:rgba(0,0,0,.54)}.ios.standalone .project:before{background:rgba(0,0,0,.12)}.project .logo img{background:#fff;border-radius:100%}.project:focus .logo img,.project:hover .logo img{box-shadow:0 7px 10px rgba(0,0,0,.3),0 10px 50px rgba(0,0,0,.12)}.repo a{-webkit-transition:box-shadow .4s,opacity .4s;transition:box-shadow .4s,opacity .4s;box-shadow:0 1.5px 3px rgba(0,0,0,.24),0 3px 8px rgba(0,0,0,.05);background:#00bfa5;color:#fff;border-radius:3px}.repo a:focus,.repo a:hover{box-shadow:0 7px 10px rgba(0,0,0,.3),0 10px 50px rgba(0,0,0,.12);opacity:.8}.drawer{width:262px;font-size:13px;line-height:1em}.ios .drawer{overflow:scroll;-webkit-overflow-scrolling:touch}.drawer .toc li a{display:block;padding:14.5px 24px;overflow:hidden;font-weight:700}.drawer .toc li.anchor a{padding:10px 24px 10px 48px;font-weight:400}.article h3,.repo a .count{font-weight:700}.drawer .section{font-size:11px;padding:14.5px 24px}.drawer .scrollable{top:104px;z-index:-1}.drawer .scrollable .wrapper{height:auto;min-height:100%}.drawer .scrollable .wrapper hr{margin:12px auto 12px 0}.drawer .scrollable .wrapper .toc{margin:12px 0}.project .banner{display:table;width:100%;height:104px;padding:20px}.project .logo{display:table-cell;width:64px;padding-right:12px}.project .logo img{display:block;width:64px;height:64px}.project .name{display:table-cell;padding-left:4px;font-size:14px;line-height:1.25em;vertical-align:middle}.repo a,.repo a .count,.repo li{display:inline-block}.project .logo+.name,.repo a{font-size:12px}.repo{margin:24px 0;text-align:center}.repo li{padding-right:12px}.repo li:last-child{padding-right:0}.repo a{padding:0 10px 0 6px;line-height:30px;height:30px}.repo a .icon{font-size:18px;vertical-align:-3px}.repo a .count{background:rgba(0,0,0,.26);color:#fff;border-radius:0 3px 3px 0;position:relative;padding:0 8px 0 4px;margin:0 -10px 0 8px;font-size:12px}.article a,.article h1,.article h2{color:#e84e40}.repo a .count:before{border-width:15px 5px 15px 0;border-color:transparent rgba(0,0,0,.26);border-style:solid;display:block;position:absolute;top:0;left:-5px}.article h1,.results .list a{border-bottom:1px solid rgba(0,0,0,.12)}.no-js .repo a .count{display:none}.drawer .section,.repo a{text-transform:uppercase;font-weight:700}.repo a .count{text-transform:none}.copyright a,pre span{-webkit-transition:color .25s;transition:color .25s}.ios.standalone .article{background:-webkit-linear-gradient(top,#fff 50%,#e84e40 50%);background:linear-gradient(to bottom,#fff 50%,#e84e40 50%);position:absolute;top:56px;right:0;bottom:0;left:0;overflow:auto;-webkit-overflow-scrolling:touch}.ios.standalone .article .wrapper{background:-webkit-linear-gradient(top,#fff 50%,#fff 50%);background:linear-gradient(to bottom,#fff 50%,#fff 50%)}.article a:focus,.article a:hover{color:#00bfa5}.article table th{background:#ee7a70;color:#fff}.article table th:first-child{border-top-left-radius:3px}.article table th:last-child{border-top-right-radius:3px}.footer{background:#e84e40;color:#fff}.copyright{color:rgba(0,0,0,.54)}.pagination a,.pagination a:focus,.pagination a:hover{color:inherit}.pagination .direction{color:rgba(255,255,255,.7)}.admonition{background:#e6f6fe}.admonition pre{background:rgba(255,255,255,.3)}.admonition.warning{background:#fce8e9}.article h2 a,.article h3 a,.article h4 a,.article h5 a,.article h6 a{color:rgba(0,0,0,.26)}.article{font-size:14px;line-height:1.7em}.article:after{display:block;clear:both}.article .wrapper{padding:116px 16px 92px}.ios.standalone .article .wrapper{position:relative;min-height:100%;padding-top:60px;margin-bottom:2px}.article h1{font-size:24px;line-height:1.333334em;padding:20px 0 42px}.article h2{font-size:20px;line-height:1.4em;padding-top:92px;margin-top:-56px}.ios.standalone .article h2{padding-top:36px;margin:0}.article h3,.article h4{font-size:14px;padding-top:76px;margin-top:-56px}.ios.standalone .article h3,.ios.standalone .article h4{padding-top:20px;margin-top:0}.article ol,.article p,.article ul{margin-top:1.5em}.article li{margin-top:.75em;margin-left:18px}.article li p{display:inline}.article ul li:before{content:"\e602";display:block;float:left;font-size:16px;width:1.2em;margin-left:-1.2em;vertical-align:-.1em}.article hr{margin-top:1.5em}.article img{max-width:100%}.article pre{padding:16px;margin:1.5em -16px 0;line-height:1.5em;overflow:auto;-webkit-overflow-scrolling:touch}.article table td,.article table th{padding:12px 16px;white-space:nowrap}.article table{box-shadow:0 1.5px 3px rgba(0,0,0,.24),0 3px 8px rgba(0,0,0,.05);border-radius:3px;margin:3em 0 1.5em;font-size:13px}.no-js .article table{display:inline-block;max-width:100%;overflow:auto;-webkit-overflow-scrolling:touch}.article table th{min-width:100px;font-size:12px;text-align:left}.article table td{border-top:1px solid rgba(0,0,0,.05)}.article .data{margin:1.5em -16px;padding:1.5em 0;overflow:auto;-webkit-overflow-scrolling:touch;text-align:center}.article .data table{display:inline-block;margin:0 16px;text-align:left}.footer{position:absolute;bottom:0;left:0;right:0;padding:0 4px}.copyright{margin:1.5em 0}.pagination{max-width:1184px;height:92px;padding:4px 0;margin-left:auto;margin-right:auto;overflow:hidden}.pagination a{display:block;height:100%}.pagination .next,.pagination .previous{position:relative;float:left;height:100%}.pagination .previous{width:25%}.pagination .previous .direction,.pagination .previous .stretch{display:none}.pagination .next{width:75%;text-align:right}.pagination .page{display:table;position:absolute;bottom:4px}.pagination .direction{display:block;position:absolute;bottom:40px;width:100%;font-size:15px;line-height:20px;padding:0 52px}.pagination .stretch{padding:0 4px}.pagination .stretch .title{font-size:18px;padding:11px 0 13px}.admonition{margin:20px -16px 0;padding:20px 16px}.admonition>:first-child{margin-top:0}.article h1 a{display:none}.article h4{font-weight:400;font-style:italic}.admonition-title{font-weight:700}.article h2 a,.article h3 a,.article h4 a,.article h5 a,.article h6 a{float:right;margin-left:20px;font-weight:400;font-style:normal}.bar{-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0);-webkit-transition:opacity .2s cubic-bezier(.75,0,.25,1),-webkit-transform .4s cubic-bezier(.75,0,.25,1);transition:opacity .2s cubic-bezier(.75,0,.25,1),transform .4s cubic-bezier(.75,0,.25,1)}#toggle-search:checked~.header .bar,.toggle-search .bar{-webkit-transform:translate3d(0,-56px,0);transform:translate3d(0,-56px,0)}.bar.search .button-reset{-webkit-transform:scale(.5,.5);transform:scale(.5,.5);-webkit-transition:opacity .4s cubic-bezier(.1,.7,.1,1),-webkit-transform .4s cubic-bezier(.1,.7,.1,1);transition:opacity .4s cubic-bezier(.1,.7,.1,1),transform .4s cubic-bezier(.1,.7,.1,1);opacity:0}.bar.search.non-empty .button-reset{-webkit-transform:scale(1,1);transform:scale(1,1);opacity:1}.results{-webkit-transition:opacity .3s .1s,width 0s .4s,height 0s .4s;transition:opacity .3s .1s,width 0s .4s,height 0s .4s}#toggle-search:checked~.main .results,.toggle-search .results{-webkit-transition:opacity .4s,width 0s,height 0s;transition:opacity .4s,width 0s,height 0s}.results .list a{-webkit-transition:background .25s;transition:background .25s}.no-csstransforms3d .bar.default{display:table}.no-csstransforms3d .bar.search{display:none;margin-top:0}.no-csstransforms3d #toggle-search:checked~.header .bar.default,.no-csstransforms3d .toggle-search .bar.default{display:none}.no-csstransforms3d #toggle-search:checked~.header .bar.search,.no-csstransforms3d .toggle-search .bar.search{display:table}.bar.search{opacity:0;margin-top:8px}.bar.search .query{background:0 0;color:rgba(0,0,0,.87);font-size:18px;padding:13px 0;margin:0;width:100%;height:48px}.result,.results .meta strong{max-width:1200px;margin-left:auto;margin-right:auto}.bar.search .query::-webkit-input-placeholder{color:rgba(0,0,0,.26)}.bar.search .query::-moz-placeholder{color:rgba(0,0,0,.26)}.bar.search .query:-moz-placeholder{color:rgba(0,0,0,.26)}.bar.search .query:-ms-input-placeholder{color:rgba(0,0,0,.26)}.bar.search .button .icon:active{background:rgba(0,0,0,.12)}.results{box-shadow:0 4px 7px rgba(0,0,0,.23),0 8px 25px rgba(0,0,0,.05);background:#fff;color:rgba(0,0,0,.87);opacity:0;position:fixed;top:0;left:0;width:0;height:100%;z-index:2;overflow-y:scroll;-webkit-overflow-scrolling:touch}#toggle-search:checked~.main .results,.toggle-search .results{opacity:1;width:100%;overflow-y:visible}.result h1,.result span{text-overflow:ellipsis;white-space:nowrap;overflow:hidden}.results .meta{background:#e84e40;color:#fff;font-weight:700}.results .list a:last-child{border-bottom:none}.results .list a:active{background:rgba(0,0,0,.12)}#toggle-search:checked~.header,.toggle-search .header{background:#fff;color:rgba(0,0,0,.54)}#toggle-search:checked~.header:before,.toggle-search .header:before{background:rgba(0,0,0,.54)}#toggle-search:checked~.header .bar.default,.toggle-search .header .bar.default{opacity:0}#toggle-search:checked~.header .bar.search,.toggle-search .header .bar.search{opacity:1}.bar.search .query::-ms-clear{display:none}.results .scrollable{top:56px}.results .meta strong{display:block;font-size:11px;padding:16px}.results .list a{display:block}.result{padding:12px 16px 16px}.result h1{line-height:24px}.result span{color:rgba(0,0,0,.54);font-size:12px}.no-csstransforms3d .results{display:none}.no-csstransforms3d #toggle-search:checked~.main .results,.no-csstransforms3d .toggle-search .results{display:block;overflow:auto}.meta{text-transform:uppercase;font-weight:700}@media only screen and (min-width:960px){.drawer,.drawer .scrollable{position:static}.backdrop{background:#f2f2f2}.backdrop-paper:after{box-shadow:0 1.5px 3px rgba(0,0,0,.24),0 3px 8px rgba(0,0,0,.05)}.button-menu{display:none}.drawer{float:left;height:auto;margin-bottom:96px;padding-top:80px}.article{margin-left:262px}.footer{z-index:5}.copyright{margin-bottom:64px}.results{height:auto;top:64px}.results .scrollable{position:static;max-height:413px}}@media only screen and (max-width:959px){#toggle-search:checked~.main .results,.drawer,.toggle-search .results{height:100%}#toggle-drawer:checked~.overlay,.toggle-drawer .overlay{width:100%;height:100%}.drawer{-webkit-transform:translate3d(-262px,0,0);transform:translate3d(-262px,0,0);-webkit-transition:-webkit-transform .25s cubic-bezier(.4,0,.2,1);transition:transform .25s cubic-bezier(.4,0,.2,1);position:fixed;z-index:5}.no-csstransforms3d .drawer{display:none}.drawer,.drawer .wrapper{background:#f2f2f2}.project{box-shadow:0 1.5px 3px rgba(0,0,0,.24),0 3px 8px rgba(0,0,0,.05);background:#e84e40;color:#fff}}@media only screen and (min-width:720px){.header{height:64px;padding:8px}.header .stretch{padding:0 16px}.header .stretch .title{font-size:20px;padding:12px 0}.project .name{margin:26px 0 0 5px}.article .wrapper{padding:128px 24px 96px}.article .data{margin:1.5em -24px}.article .data table{margin:0 24px}.article h2{padding-top:100px;margin-top:-64px}.ios.standalone .article h2{padding-top:28px;margin-top:8px}.article h3,.article h4{padding-top:84px;margin-top:-64px}.ios.standalone .article h3,.ios.standalone .article h4{padding-top:20px;margin-top:0}.article pre{padding:1.5em 24px;margin:1.5em -24px 0}.footer{padding:0 8px}.pagination{height:96px;padding:8px 0}.pagination .direction{padding:0 56px;bottom:40px}.pagination .stretch{padding:0 8px}.admonition{margin:20px -24px 0;padding:20px 24px}.bar.search .query{font-size:20px;padding:12px 0}.results .scrollable{top:64px}.results .meta strong{padding:16px 24px}.result{padding:16px 24px 20px}}@media only screen and (min-width:1200px){.header{width:100%}.drawer .scrollable .wrapper hr{width:48px}}@media only screen and (orientation:portrait){.ios.standalone .header{height:76px;padding-top:24px}.ios.standalone .header:before,.ios.standalone .project:before{content:" ";z-index:4;width:100%;height:20px;position:absolute;left:0}.ios.standalone .header:before{top:0}.ios.standalone .drawer .scrollable{top:124px}.ios.standalone .project{padding-top:20px}.ios.standalone .project:before{top:0}.ios.standalone .article{position:absolute;top:76px;right:0;bottom:0;left:0}.ios.standalone .results .scrollable{top:76px}}@media only screen and (orientation:portrait) and (min-width:720px){.ios.standalone .header{height:84px;padding-top:28px}.ios.standalone .results .scrollable{top:84px}}@media only screen and (max-width:719px){.bar .path{display:none}}@media only screen and (max-width:479px){.button-github,.button-twitter{display:none}}@media only screen and (min-width:720px) and (max-width:959px){.header .stretch{padding:0 24px}}@media only screen and (min-width:480px){.pagination .next,.pagination .previous{width:50%}.pagination .previous .direction{display:block}.pagination .previous .stretch{display:table}}@media print{.footer,.header,.project{display:none}.article pre,.article pre *{color:rgba(0,0,0,.87)!important}.article table{border-radius:none;box-shadow:none}.article table th{color:#e84e40}}
