@@ -1,6 +1,3 @@
-{% if repo_name == 'GitHub' %}
-  {% set repo_id = repo_url | replace('https://github.com/', '') %}
-{% endif %}
 <nav aria-label="navigation">
   <a href="{{ repo_url }}" class="project">
     <div class="banner">
